// 使用的版本
syntax = "proto3";
// 输出到的包名
option java_package = "com.yjlan.im.common.proto";
// 是否拆分成多个文件
option java_multiple_files = true;

message AuthenticateRequest {
    int64 uid = 1;
    string token = 2;
    int64 timestamp = 3;
    string instanceCode = 4;
}

message AuthenticateResponse {
    int32 code = 1;
    string message = 2;
}

message MessageSendRequest {
    int64 senderId = 1;
    int64 receiverId = 2;
    string sendContent = 3;
}

message MessageSendResponse {
    int32 code = 1;
    string message = 2;
    int64 senderId = 3;
    int64 receiverId = 4;
    int64 timestamp = 5;

}

message MessagePushRequest {
    int64 messageId = 1;
    int64 senderId = 2;
    int64 receiverId = 3;
    string sendContent = 4;
    int64 timestamp = 5;
}

message MessagePushResponse {
    int32 code = 1;
    string message = 2;
    int64 senderId = 3;
    int64 receiverId = 4;
    string sendContent = 5;
    int64 timestamp = 6;
}

message SendDelivererRequest {
   string instanceCode = 1;

}


message SendDelivererResponse {
    int32 code = 1;
    string message = 2;
}

message GroupMessageSendRequest {
    int64 senderId = 1;
    int64 groupId = 2;
    string sendContent = 3;
    int64 timeStamp = 4;
}


message GroupMessageSendResponse {
    int32 code = 1;
    string message = 2;
    int64 senderId = 3;
    int64 groupId = 4;
    int64 timestamp = 5;
    int64 receiverId = 6;
    string sendContent = 7;
}

message GroupMessagePushRequest {
    int64 senderId = 1;
    int64 groupId = 2;
    int64 reviverId = 3;
    string sendContent = 4;
    int64 timeStamp = 5;
}

message GroupMessagePushResponse {
    int32 code = 1;
    string message = 2;
    int64 groupId = 3;
    int64 senderId = 4;
    int64 receiverId = 5;
    string sendContent = 6;
    int64 timeStamp = 7;
}








